logs/mailgun.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mailgun'...
Compiling './lib/python3.5/site-packages/mailgun/__init__.py'...
***   File "./lib/python3.5/site-packages/mailgun/__init__.py", line 140
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mailgun-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyactiveresource'...
Compiling './lib/python3.5/site-packages/pyactiveresource/activeresource.py'...
***   File "./lib/python3.5/site-packages/pyactiveresource/activeresource.py", line 736
    except connection.ResourceInvalid, err:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyactiveresource/connection.py'...
***   File "./lib/python3.5/site-packages/pyactiveresource/connection.py", line 257
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyactiveresource/formats.py'...
***   File "./lib/python3.5/site-packages/pyactiveresource/formats.py", line 31
    except util.Error, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyactiveresource/util.py'...
***   File "./lib/python3.5/site-packages/pyactiveresource/util.py", line 267
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyactiveresource-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
